<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dexhandv2_manus_gui</name>
  <version>0.0.1</version>
  <description>Simple GUI for Controlling dexhand_manus node features</description>
  <maintainer email="trent@iotdesignshop.com">Trent Shumay</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>dexhandv2_control</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
